fix(style.css): fix negative z-index

--- a/styles/style.css
+++ b/styles/style.css
@@ -90,7 +90,7 @@ h1, h2 {
   background-repeat: no-repeat;
   width: 1100px;
   height: 757px;
-  z-index: -1;
+  z-index: 1;
   color: #fff;
 }
 
@@ -192,7 +192,7 @@ h1, h2 {
   width: 334px;
   min-height: 563px;
   padding: 51px 40px 48px 40px;
-  z-index: -1;
+  z-index: 1;
 
 }
 
